<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="menu">MENU</string>
    <string name="calculator">Calculator</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="multiplication">X</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="todo">TODO</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="clear">C</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="percent">%</string>
    <string name="negative">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

</resources>