<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/imageViewMenu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/menu"
            android:padding="4dp"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/stencil"
            android:gravity="center"
            android:text="@string/calculator"
            android:textColor="@color/dark_white"
            android:textSize="40sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|right"
        android:paddingEnd="20dp"
        android:text="@string/zero"
        android:textColor="@color/dark_white"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/grid_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid_first">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_divide"
            style="@style/equipments_style"
            android:onClick="onClick"
            android:text="@string/divide"
            app:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_multiplication"
            style="@style/equipments_style"
            android:onClick="onClick"
            android:text="@string/multiplication"
            app:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_addition"
            style="@style/equipments_style"
            android:onClick="onClick"
            android:text="@string/addition"
            app:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_subtraction"
            style="@style/equipments_style"
            android:onClick="onClick"
            android:text="@string/subtraction"
            app:layout_columnWeight="1"/>
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid_second">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nine"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/nine"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_eight"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/eight"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_seven"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/seven"
            app:layout_columnWeight="1" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/equipments_background"
            android:contentDescription="@string/todo"
            android:onClick="delete"
            android:src="@android:drawable/ic_input_delete"
            app:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid_third">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_six"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/six"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_five"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/five"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_four"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/four"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear"
            style="@style/equipments_style"
            android:onClick="clear"
            android:text="@string/clear"
            app:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid_bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_three"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/three"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_two"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/two"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_one"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/one"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_percent"
            style="@style/equipments_style"
            android:text="@string/percent"
            app:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_negative"
            style="@style/numbers_style"
            android:text="@string/negative"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_zero"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/zero"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_point"
            style="@style/numbers_style"
            android:onClick="onClick"
            android:text="@string/point"
            app:layout_columnWeight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_equals"
            style="@style/equals_style"
            android:onClick="solveExpression"
            android:text="@string/equals"
            app:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>